# python-webapp-template

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  mkdocs.yml  pyproject.toml  sample.env
docs/: deploying.md  dev_tools.md  index.md  structure.md  testing.md
src/: a.json  main.py
src/python_webapp/: cli.py  config.py  container.py  runner.py
src/python_webapp/apps/system/: domain.py  services.py
src/python_webapp/apps/system/api/: api_models.py  dependencies.py  router.py
src/python_webapp/apps/user_management/: domain.py  errors.py  services.py
src/python_webapp/apps/user_management/api/: api_models.py  dependencies.py  router.py
src/python_webapp/apps/user_management/repositories/: db_models.py  user_repository.py
src/python_webapp/core/: db.py  di.py  errors.py  health.py  manager.py
src/python_webapp/managers/: fastapi_manager.py  sqlalchemy_manager.py
src/python_webapp/migrations/: env.py
src/python_webapp/migrations/versions/: dfbec4a2555c_create_user.py
src/python_webapp_template/: config.py  container.py  runner.py
src/python_webapp_template/apps/warehouse_layout/: domain.py  repositories.py  services.py
src/python_webapp_template/apps/warehouse_layout/api/: api_models.py  dependencies.py  router.py
src/python_webapp_template/core/: di.py
src/python_webapp_template/core/api/: api_models.py
src/python_webapp_template/managers/: fastapi_manager.py  neo4j_manager.py
test/unit/: test_runner.py
test/unit/apps/system/: test_services.py
test/unit/apps/system/api/: test_router.py
test/unit/apps/user_management/: test_services.py
test/unit/apps/user_management/api/: test_router.py
test/unit/core/: test_di.py
