[tool.poetry]
name = "python-webapp-template"
version = "0.1.0"
description = "Template for a python web application."
authors = ["Mahdi Sadeghi <mahdi74sadeghi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/python_webapp"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.3.0"}
pydantic-settings = "^2.0.3"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
psycopg = {extras = ["binary", "pool"], version = "^3.1.10"}
alembic = {extras = ["tz"], version = "^1.12.0"}
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.291"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[tool.black]
include = "src/|test/"
extend-exclude = "\\.pyc$|\\.mako"
line-length = 100

[tool.ruff]
src = ["src/"]
select = [
    "F", # pyflakes
    "E", # pycodestyle (Error)
    "W", # pycodestyle (Warning)
    "C90", # mccabe
    "I", # isort
    "UP", # pep8-naming
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "BLE", # flake8-blind-except
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "TD", # flake8-todos
    "FIX", # flake8-fixme
    "ERA", # flake8-eradicate
    "PL", # flake8-pylint
    "FLY", # flake8-flynt
    "PERF", # flake8-perflint
    "RUF", # ruff-specific
    # "S", # flake8-bandit
    # "D", # Pydocstyle
]
ignore = [
    "ANN101", # Missing type annotation for `self` in method.
    "ARG004", # Unused static method argument.
    "PLR0913", # Too many arguments to function call.
]
line-length = 100

[tool.mypy]
python_version = "3.11"
exclude = [
    ".venv"
]

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
